Further work on #673